--- a/Localization/cn.json
+++ b/Localization/cn.json
@@ -18,7 +18,7 @@
   "Dialog.Apply": "应用",
   "Dialog.Cancel": "取消",
   "Dialog.ConfirmRemoval": "确认删除",
-  "Dialog.ExecutableFilesFilter": "Executable Files (*.exe)|*.exe|All Files (*.*)|*.*",
+  "Dialog.ExecutableFilesFilter": "可执行文件 (*.exe)|*.exe|所有文件 (*.*)|*.*",
   "Dialog.No": "否",
   "Dialog.NoSelection": "未选择",
   "Dialog.OK": "确定",
@@ -38,11 +38,10 @@
   "Export.ErrorMessage": "导出日志时出错：{0}",
   "Export.Filter": "文本文件 (*.txt)|*.txt|日志文件 (*.log)|*.log|所有文件 (*.*)|*.*",
   "Export.LogsExported": "日志导出成功！",
-  "Export.Success": "Export Complete",
-  "Export.Sucess": "导出完成",
+  "Export.Success": "导出完成",
   "Export.Title": "导出日志",
   "Export.UILogsExported": "UI 日志导出成功！",
-  "Log.ArgumentsInvalid": "Cannot restart {0}: Arguments invalid - {1}",
+  "Log.ArgumentsInvalid": "无法重启 {0}：参数无效 - {1}",
   "Log.ErrorCheckingProcess": "检查 {0} 是否正在运行时出错：{1}",
   "Log.ErrorMonitoring": "监控 {0} 时出错：{1}",
   "Log.FailedToRestart": "重启 {0} 失败：{1}",
@@ -61,8 +60,8 @@
   "Log.ShuttingDown": "RestartIt 正在关闭",
   "Log.Started": "RestartIt 成功启动",
   "Log.SuccessfullyRestarted": "成功重启了 {0}",
-  "Log.ValidationFailed": "Cannot restart {0}: {1}",
-  "Log.WorkingDirectoryInvalid": "Cannot restart {0}: Working directory invalid - {1}",
+  "Log.ValidationFailed": "无法重启 {0}：{1}",
+  "Log.WorkingDirectoryInvalid": "无法重启 {0}：工作目录无效 - {1}",
   "MainWindow.ActivityLog": "活动日志",
   "MainWindow.AddProgram": "➕ 添加程序",
   "MainWindow.ClearLog": "清空日志",
@@ -73,7 +72,7 @@
   "MainWindow.Settings": "设置",
   "ProgramEdit.AddTitle": "添加程序",
   "ProgramEdit.Arguments": "参数：",
-  "ProgramEdit.ArgumentsOptional": "Arguments (optional):",
+  "ProgramEdit.ArgumentsOptional": "参数（可选）：",
   "ProgramEdit.Browse": "浏览…",
   "ProgramEdit.CheckInterval": "检查间隔（秒）：",
   "ProgramEdit.ExecutablePath": "可执行文件路径：",
@@ -86,7 +85,7 @@
   "ProgramEdit.Title": "编辑程序",
   "ProgramEdit.ValidationError": "验证错误",
   "ProgramEdit.WorkingDirectory": "工作目录：",
-  "ProgramEdit.WorkingDirectoryOptional": "Working Directory (optional):",
+  "ProgramEdit.WorkingDirectoryOptional": "工作目录（可选）：",
   "Settings.About": "关于",
   "Settings.About.Copyright": "版权 © 2025 Antik79",
   "Settings.About.Description": "一款 Windows 桌面应用程序，用于监视指定程序并在其停止运行时自动重新启动。",
@@ -106,30 +105,28 @@
   "Settings.Email.NotifyOnFailure": "重启失败时通知",
   "Settings.Email.NotifyOnRestart": "重启成功时通知",
   "Settings.Email.RecipientEmail": "收件人邮箱：",
-  "Settings.Email.RecipientEmailRequired": "Please enter recipient email.",
+  "Settings.Email.RecipientEmailRequired": "请输入收件人邮箱。",
   "Settings.Email.SenderEmail": "发件人邮箱：",
-  "Settings.Email.SenderEmailRequired": "Please enter sender email.",
+  "Settings.Email.SenderEmailRequired": "请输入发件人邮箱。",
   "Settings.Email.SenderName": "发件人姓名：",
   "Settings.Email.SenderPassword": "发件人密码：",
   "Settings.Email.SmtpPort": "SMTP 端口：",
-  "Settings.Email.SmtpPortInvalid": "Please enter valid SMTP port.",
+  "Settings.Email.SmtpPortInvalid": "请输入有效的 SMTP 端口。",
   "Settings.Email.SmtpServer": "SMTP 服务器：",
-  "Settings.Email.SmtpServerRequired": "Please enter SMTP server.",
-  "Settings.Email.TestBody": "This is a test email to verify your email notification settings are working correctly.\n\nIf you receive this email, your settings are configured properly!",
+  "Settings.Email.SmtpServerRequired": "请输入 SMTP 服务器。",
+  "Settings.Email.TestBody": "这是一封测试邮件，用于验证您的邮件通知设置是否正常工作。\n\n如果您收到此邮件，说明您的设置已正确配置！",
   "Settings.Email.TestEmail": "发送测试邮件",
   "Settings.Email.TestError": "测试邮件发送失败",
   "Settings.Email.TestErrorMessage": "Failed to send test email:\n\n{0}\n\nCommon issues:\n• Wrong SMTP server or port\n• Invalid credentials\n• App password required (Gmail)\n• Firewall blocking SMTP",
-  "Settings.Email.TestSubject": "Test Email from RestartIt",
-  "Settings.Email.TestSucces": "测试邮件已发送",
-  "Settings.Email.TestSuccess": "Test Email Sent",
+  "Settings.Email.TestSubject": "来自 RestartIt 的测试邮件",
+  "Settings.Email.TestSuccess": "测试邮件已发送",
   "Settings.Email.TestSuccessMessage": "测试邮件发送成功！请检查收件箱。",
   "Settings.Email.UseSsl": "使用 SSL/TLS",
   "Settings.EmailNotifications": "邮件通知",
   "Settings.Logging": "日志记录",
-  "Settings.Logging.EnableFileLogging": "Enable File Logging",
-  "Settings.Logging.EnableFileLoging": "启用文件日志记录",
+  "Settings.Logging.EnableFileLogging": "启用文件日志记录",
   "Settings.Logging.KeepLogsFor": "保留日志天数：",
-  "Settings.Logging.LogFileDirectory": "Log File Directory:",
+  "Settings.Logging.LogFileDirectory": "日志文件目录：",
   "Settings.Logging.LogFilePath": "日志文件路径：",
   "Settings.Logging.MaxFileSize": "最大文件大小（MB）：",
   "Settings.Logging.MinLogLevel": "最低日志级别：",
@@ -143,17 +140,28 @@
   "Tray.Exit": "退出",
   "Tray.MinimizedMessage": "应用已最小化至系统托盘",
   "Tray.ShowWindow": "显示窗口",
-  "Validation.ArgumentsTooLong": "Arguments are too long. Maximum length is 8192 characters.",
-  "Validation.DirectoryNotFound": "The working directory does not exist.",
-  "Validation.DirectoryValidationError": "Error validating directory: {0}",
-  "Validation.ExecutablePathRequired": "Executable path is required.",
-  "Validation.FileNotFound": "The executable file does not exist.",
-  "Validation.InvalidNullCharacter": "Arguments cannot contain null characters.",
-  "Validation.InvalidPathCharacters": "The path contains invalid characters.",
-  "Validation.InvalidPathFormat": "The path format is invalid.",
-  "Validation.NoFileExtension": "The file does not have an extension. Please specify a valid executable file.",
-  "Validation.PathIsDirectory": "The specified path is a directory, not a file.",
-  "Validation.PathNotSupported": "The path format is not supported.",
-  "Validation.PathTooLong": "The path is too long. Maximum length is 260 characters.",
-  "Validation.PathValidationError": "Error validating path: {0}"
+  "Validation.ArgumentsTooLong": "参数过长。最大长度为 8192 个字符。",
+  "Validation.DirectoryNotFound": "工作目录不存在。",
+  "Validation.DirectoryValidationError": "验证目录时出错：{0}",
+  "Validation.ExecutablePathRequired": "必须提供可执行文件路径。",
+  "Validation.FileNotFound": "可执行文件不存在。",
+  "Validation.InvalidNullCharacter": "参数不能包含空字符。",
+  "Validation.InvalidPathCharacters": "路径包含无效字符。",
+  "Validation.InvalidPathFormat": "路径格式无效。",
+  "Validation.NoFileExtension": "文件没有扩展名。请指定有效的可执行文件。",
+  "Validation.PathIsDirectory": "指定的路径是目录，而不是文件。",
+  "Validation.PathNotSupported": "不支持该路径格式。",
+  "Validation.PathTooLong": "路径过长。最大长度为 260 个字符。",
+  "Validation.PathValidationError": "验证路径时出错：{0}",
+  "Settings.Appearance": "Appearance",
+  "Settings.Appearance.FontFamily": "Font Family:",
+  "Settings.Appearance.FontSize": "Font Size:",
+  "Settings.Appearance.BackgroundColor": "Background Color:",
+  "Settings.Appearance.TextColor": "Text Color:",
+  "Settings.Appearance.HighlightColor": "Highlight Color:",
+  "Settings.Appearance.BorderColor": "Border Color:",
+  "Settings.Appearance.SurfaceColor": "Surface Color:",
+  "Settings.Appearance.SecondaryTextColor": "Secondary Text Color:",
+  "Settings.Appearance.Preview": "Preview:",
+  "Settings.Appearance.ResetToDefaults": "Reset to Defaults"
 }
