--- a/Localization/da.json
+++ b/Localization/da.json
@@ -18,7 +18,7 @@
   "Dialog.Apply": "Anvend",
   "Dialog.Cancel": "Annuller",
   "Dialog.ConfirmRemoval": "Bekræft fjernelse",
-  "Dialog.ExecutableFilesFilter": "Executable Files (*.exe)|*.exe|All Files (*.*)|*.*",
+  "Dialog.ExecutableFilesFilter": "Eksekverbare filer (*.exe)|*.exe|Alle filer (*.*)|*.*",
   "Dialog.No": "Nej",
   "Dialog.NoSelection": "Ingen markering",
   "Dialog.OK": "OK",
@@ -41,7 +41,7 @@
   "Export.Success": "Eksport fuldført",
   "Export.Title": "Eksporter logfiler",
   "Export.UILogsExported": "UI‑logfiler eksporteret med succes!",
-  "Log.ArgumentsInvalid": "Cannot restart {0}: Arguments invalid - {1}",
+  "Log.ArgumentsInvalid": "Kan ikke genstarte {0}: Argumenter ugyldige - {1}",
   "Log.ErrorCheckingProcess": "Fejl ved kontrol af om {0} kører: {1}",
   "Log.ErrorMonitoring": "Fejl ved overvågning af {0}: {1}",
   "Log.FailedToRestart": "Kunne ikke genstarte {0}: {1}",
@@ -60,8 +60,8 @@
   "Log.ShuttingDown": "RestartIt lukker ned",
   "Log.Started": "RestartIt startede korrekt",
   "Log.SuccessfullyRestarted": "Genstartet {0} korrekt",
-  "Log.ValidationFailed": "Cannot restart {0}: {1}",
-  "Log.WorkingDirectoryInvalid": "Cannot restart {0}: Working directory invalid - {1}",
+  "Log.ValidationFailed": "Kan ikke genstarte {0}: {1}",
+  "Log.WorkingDirectoryInvalid": "Kan ikke genstarte {0}: Arbejdsmappe ugyldig - {1}",
   "MainWindow.ActivityLog": "Aktivitetslog",
   "MainWindow.AddProgram": "➕ Tilføj program",
   "MainWindow.ClearLog": "Ryd log",
@@ -72,7 +72,7 @@
   "MainWindow.Settings": "Indstilinger",
   "ProgramEdit.AddTitle": "Tilføj program",
   "ProgramEdit.Arguments": "Argumenter:",
-  "ProgramEdit.ArgumentsOptional": "Arguments (optional):",
+  "ProgramEdit.ArgumentsOptional": "Argumenter (valgfri):",
   "ProgramEdit.Browse": "Gennemse...",
   "ProgramEdit.CheckInterval": "Kontrolinterval (sekunder):",
   "ProgramEdit.ExecutablePath": "Kørbar sti:",
@@ -85,7 +85,7 @@
   "ProgramEdit.Title": "Rediger program",
   "ProgramEdit.ValidationError": "Valideringsfejl",
   "ProgramEdit.WorkingDirectory": "Arbejdsmappe:",
-  "ProgramEdit.WorkingDirectoryOptional": "Working Directory (optional):",
+  "ProgramEdit.WorkingDirectoryOptional": "Arbejdsmappe (valgfri):",
   "Settings.About": "Om",
   "Settings.About.Copyright": "© 2025 Antik79",
   "Settings.About.Description": "Et Windows‑desktopprogram, der overvåger angivne programmer og automatisk genstarter dem, hvis de stopper med at køre.",
@@ -105,20 +105,20 @@
   "Settings.Email.NotifyOnFailure": "Underret ved mislykket genstart",
   "Settings.Email.NotifyOnRestart": "Underret ved vellykket genstart",
   "Settings.Email.RecipientEmail": "Modtager‑e‑mail:",
-  "Settings.Email.RecipientEmailRequired": "Please enter recipient email.",
+  "Settings.Email.RecipientEmailRequired": "Angiv venligst modtager‑e‑mail.",
   "Settings.Email.SenderEmail": "Afsender‑e‑mail:",
-  "Settings.Email.SenderEmailRequired": "Please enter sender email.",
+  "Settings.Email.SenderEmailRequired": "Angiv venligst afsender‑e‑mail.",
   "Settings.Email.SenderName": "Afsendernavn:",
   "Settings.Email.SenderPassword": "Afsenderadgangskode:",
   "Settings.Email.SmtpPort": "SMTP‑port:",
-  "Settings.Email.SmtpPortInvalid": "Please enter valid SMTP port.",
+  "Settings.Email.SmtpPortInvalid": "Angiv venligst en gyldig SMTP‑port.",
   "Settings.Email.SmtpServer": "SMTP‑server:",
-  "Settings.Email.SmtpServerRequired": "Please enter SMTP server.",
-  "Settings.Email.TestBody": "This is a test email to verify your email notification settings are working correctly.\n\nIf you receive this email, your settings are configured properly!",
+  "Settings.Email.SmtpServerRequired": "Angiv venligst SMTP‑server.",
+  "Settings.Email.TestBody": "Dette er en test‑e‑mail for at bekræfte, at dine e‑mail‑meddelelsesindstillinger fungerer korrekt.\n\nHvis du modtager denne e‑mail, er dine indstillinger konfigureret korrekt!",
   "Settings.Email.TestEmail": "Send test‑e‑mail",
   "Settings.Email.TestError": "Test‑e‑mail mislykkedes",
   "Settings.Email.TestErrorMessage": "Failed to send test email:\n\n{0}\n\nCommon issues:\n• Wrong SMTP server or port\n• Invalid credentials\n• App password required (Gmail)\n• Firewall blocking SMTP",
-  "Settings.Email.TestSubject": "Test Email from RestartIt",
+  "Settings.Email.TestSubject": "Test‑e‑mail fra RestartIt",
   "Settings.Email.TestSuccess": "Test‑e‑mail sendt",
   "Settings.Email.TestSuccessMessage": "Test‑e‑mail blev sendt med succes! Tjek din indbakke.",
   "Settings.Email.UseSsl": "Brug SSL/TLS",
@@ -126,7 +126,7 @@
   "Settings.Logging": "Logning",
   "Settings.Logging.EnableFileLogging": "Aktiver fillogning",
   "Settings.Logging.KeepLogsFor": "Bevar logfiler i (dage):",
-  "Settings.Logging.LogFileDirectory": "Log File Directory:",
+  "Settings.Logging.LogFileDirectory": "Logfilmappe:",
   "Settings.Logging.LogFilePath": "Logfilsti:",
   "Settings.Logging.MaxFileSize": "Maksimal filstørrelse (MB):",
   "Settings.Logging.MinLogLevel": "Minimum logniveau:",
@@ -140,17 +140,28 @@
   "Tray.Exit": "Afslut",
   "Tray.MinimizedMessage": "Programmet er minimeret til systembakken",
   "Tray.ShowWindow": "Vis vindue",
-  "Validation.ArgumentsTooLong": "Arguments are too long. Maximum length is 8192 characters.",
-  "Validation.DirectoryNotFound": "The working directory does not exist.",
-  "Validation.DirectoryValidationError": "Error validating directory: {0}",
-  "Validation.ExecutablePathRequired": "Executable path is required.",
-  "Validation.FileNotFound": "The executable file does not exist.",
-  "Validation.InvalidNullCharacter": "Arguments cannot contain null characters.",
-  "Validation.InvalidPathCharacters": "The path contains invalid characters.",
-  "Validation.InvalidPathFormat": "The path format is invalid.",
-  "Validation.NoFileExtension": "The file does not have an extension. Please specify a valid executable file.",
-  "Validation.PathIsDirectory": "The specified path is a directory, not a file.",
-  "Validation.PathNotSupported": "The path format is not supported.",
-  "Validation.PathTooLong": "The path is too long. Maximum length is 260 characters.",
-  "Validation.PathValidationError": "Error validating path: {0}"
+  "Validation.ArgumentsTooLong": "Argumenter er for lange. Maksimal længde er 8192 tegn.",
+  "Validation.DirectoryNotFound": "Arbejdsmappen findes ikke.",
+  "Validation.DirectoryValidationError": "Fejl ved validering af mappe: {0}",
+  "Validation.ExecutablePathRequired": "Eksekverbar sti er påkrævet.",
+  "Validation.FileNotFound": "Den eksekverbare fil findes ikke.",
+  "Validation.InvalidNullCharacter": "Argumenter må ikke indeholde nultegn.",
+  "Validation.InvalidPathCharacters": "Stien indeholder ugyldige tegn.",
+  "Validation.InvalidPathFormat": "Stiformat er ugyldigt.",
+  "Validation.NoFileExtension": "Filen har ingen filtypenavn. Angiv en gyldig eksekverbar fil.",
+  "Validation.PathIsDirectory": "Den angivne sti er en mappe, ikke en fil.",
+  "Validation.PathNotSupported": "Stiformat understøttes ikke.",
+  "Validation.PathTooLong": "Stien er for lang. Maksimal længde er 260 tegn.",
+  "Validation.PathValidationError": "Fejl ved validering af sti: {0}",
+  "Settings.Appearance": "Appearance",
+  "Settings.Appearance.FontFamily": "Font Family:",
+  "Settings.Appearance.FontSize": "Font Size:",
+  "Settings.Appearance.BackgroundColor": "Background Color:",
+  "Settings.Appearance.TextColor": "Text Color:",
+  "Settings.Appearance.HighlightColor": "Highlight Color:",
+  "Settings.Appearance.BorderColor": "Border Color:",
+  "Settings.Appearance.SurfaceColor": "Surface Color:",
+  "Settings.Appearance.SecondaryTextColor": "Secondary Text Color:",
+  "Settings.Appearance.Preview": "Preview:",
+  "Settings.Appearance.ResetToDefaults": "Reset to Defaults"
 }
