--- a/Localization/de.json
+++ b/Localization/de.json
@@ -18,7 +18,7 @@
   "Dialog.Apply": "Übernehmen",
   "Dialog.Cancel": "Abbrechen",
   "Dialog.ConfirmRemoval": "Entfernung Bestätigen",
-  "Dialog.ExecutableFilesFilter": "Executable Files (*.exe)|*.exe|All Files (*.*)|*.*",
+  "Dialog.ExecutableFilesFilter": "Ausführbare Dateien (*.exe)|*.exe|Alle Dateien (*.*)|*.*",
   "Dialog.No": "Nein",
   "Dialog.NoSelection": "Keine Auswahl",
   "Dialog.OK": "OK",
@@ -41,7 +41,7 @@
   "Export.Success": "Export Abgeschlossen",
   "Export.Title": "Protokolle Exportieren",
   "Export.UILogsExported": "UI-Protokolle erfolgreich exportiert!",
-  "Log.ArgumentsInvalid": "Cannot restart {0}: Arguments invalid - {1}",
+  "Log.ArgumentsInvalid": "Kann {0} nicht neu starten: Argumente ungültig - {1}",
   "Log.ErrorCheckingProcess": "Fehler bei der Überprüfung von {0}: {1}",
   "Log.ErrorMonitoring": "Fehler bei der Überwachung von {0}: {1}",
   "Log.FailedToRestart": "Neustart von {0} fehlgeschlagen: {1}",
@@ -60,8 +60,8 @@
   "Log.ShuttingDown": "RestartIt wird heruntergefahren",
   "Log.Started": "RestartIt erfolgreich gestartet",
   "Log.SuccessfullyRestarted": "{0} erfolgreich neu gestartet",
-  "Log.ValidationFailed": "Cannot restart {0}: {1}",
-  "Log.WorkingDirectoryInvalid": "Cannot restart {0}: Working directory invalid - {1}",
+  "Log.ValidationFailed": "Kann {0} nicht neu starten: {1}",
+  "Log.WorkingDirectoryInvalid": "Kann {0} nicht neu starten: Arbeitsverzeichnis ungültig - {1}",
   "MainWindow.ActivityLog": "Aktivitätsprotokoll",
   "MainWindow.AddProgram": "➕ Programm Hinzufügen",
   "MainWindow.ClearLog": "Protokoll Löschen",
@@ -72,7 +72,7 @@
   "MainWindow.Settings": "Einstellungen",
   "ProgramEdit.AddTitle": "Programm Hinzufügen",
   "ProgramEdit.Arguments": "Argumente:",
-  "ProgramEdit.ArgumentsOptional": "Arguments (optional):",
+  "ProgramEdit.ArgumentsOptional": "Argumente (optional):",
   "ProgramEdit.Browse": "Durchsuchen...",
   "ProgramEdit.CheckInterval": "Prüfintervall (Sekunden):",
   "ProgramEdit.ExecutablePath": "Programmpfad:",
@@ -85,7 +85,7 @@
   "ProgramEdit.Title": "Programm Bearbeiten",
   "ProgramEdit.ValidationError": "Validierungsfehler",
   "ProgramEdit.WorkingDirectory": "Arbeitsverzeichnis:",
-  "ProgramEdit.WorkingDirectoryOptional": "Working Directory (optional):",
+  "ProgramEdit.WorkingDirectoryOptional": "Arbeitsverzeichnis (optional):",
   "Settings.About": "Über",
   "Settings.About.Copyright": "Copyright © 2025 Antik79",
   "Settings.About.Description": "Eine Windows-Desktop-Anwendung, die angegebene Programme überwacht und automatisch neu startet, wenn sie beendet werden.",
@@ -97,30 +97,30 @@
   "Settings.About.Version": "Version",
   "Settings.App.Language": "Sprache:",
   "Settings.App.MinimizeToTray": "In Systemleiste Minimieren",
-  "Settings.App.MinimizeToTrayDesc": "When minimized, the application will hide to the system tray instead of the taskbar.",
+  "Settings.App.MinimizeToTrayDesc": "Wenn minimiert, wird die Anwendung in der Systemleiste statt in der Taskleiste angezeigt.",
   "Settings.App.StartMinimized": "Minimiert Starten",
-  "Settings.App.StartMinimizedDesc": "Start RestartIt minimized to system tray (requires 'Minimize to system tray' enabled).",
+  "Settings.App.StartMinimizedDesc": "RestartIt minimiert in der Systemleiste starten (erfordert 'In Systemleiste Minimieren').",
   "Settings.App.StartWithWindows": "Mit Windows Starten",
-  "Settings.App.StartWithWindowsDesc": "Automatically start RestartIt when Windows starts.",
+  "Settings.App.StartWithWindowsDesc": "RestartIt automatisch beim Windows-Start starten.",
   "Settings.Application": "Anwendung",
   "Settings.Email.Enable": "E-Mail-Benachrichtigungen Aktivieren",
   "Settings.Email.NotifyOnFailure": "Bei Neustart-Fehler Benachrichtigen",
   "Settings.Email.NotifyOnRestart": "Bei Erfolgreichem Neustart Benachrichtigen",
   "Settings.Email.RecipientEmail": "Empfänger-E-Mail:",
-  "Settings.Email.RecipientEmailRequired": "Please enter recipient email.",
+  "Settings.Email.RecipientEmailRequired": "Bitte geben Sie die Empfänger-E-Mail ein.",
   "Settings.Email.SenderEmail": "Absender-E-Mail:",
-  "Settings.Email.SenderEmailRequired": "Please enter sender email.",
+  "Settings.Email.SenderEmailRequired": "Bitte geben Sie die Absender-E-Mail ein.",
   "Settings.Email.SenderName": "Absendername:",
   "Settings.Email.SenderPassword": "Absender-Passwort:",
   "Settings.Email.SmtpPort": "SMTP-Port:",
-  "Settings.Email.SmtpPortInvalid": "Please enter valid SMTP port.",
+  "Settings.Email.SmtpPortInvalid": "Bitte geben Sie einen gültigen SMTP-Port ein.",
   "Settings.Email.SmtpServer": "SMTP-Server:",
-  "Settings.Email.SmtpServerRequired": "Please enter SMTP server.",
-  "Settings.Email.TestBody": "This is a test email to verify your email notification settings are working correctly.\n\nIf you receive this email, your settings are configured properly!",
+  "Settings.Email.SmtpServerRequired": "Bitte geben Sie den SMTP-Server ein.",
+  "Settings.Email.TestBody": "Dies ist eine Test-E-Mail, um zu überprüfen, ob Ihre E-Mail-Benachrichtigungseinstellungen korrekt funktionieren.\n\nWenn Sie diese E-Mail erhalten, sind Ihre Einstellungen richtig konfiguriert!",
   "Settings.Email.TestEmail": "Test-E-Mail Senden",
   "Settings.Email.TestError": "E-Mail-Test Fehlgeschlagen",
   "Settings.Email.TestErrorMessage": "Failed to send test email:\n\n{0}\n\nCommon issues:\n• Wrong SMTP server or port\n• Invalid credentials\n• App password required (Gmail)\n• Firewall blocking SMTP",
-  "Settings.Email.TestSubject": "Test Email from RestartIt",
+  "Settings.Email.TestSubject": "Test-E-Mail von RestartIt",
   "Settings.Email.TestSuccess": "Test-E-Mail Gesendet",
   "Settings.Email.TestSuccessMessage": "Test-E-Mail erfolgreich gesendet! Überprüfen Sie Ihren Posteingang.",
   "Settings.Email.UseSsl": "SSL/TLS Verwenden",
@@ -128,7 +128,7 @@
   "Settings.Logging": "Protokollierung",
   "Settings.Logging.EnableFileLogging": "Dateiprotokollierung Aktivieren",
   "Settings.Logging.KeepLogsFor": "Protokolle Aufbewahren (Tage):",
-  "Settings.Logging.LogFileDirectory": "Log File Directory:",
+  "Settings.Logging.LogFileDirectory": "Protokolldatei-Verzeichnis:",
   "Settings.Logging.LogFilePath": "Protokolldateipfad:",
   "Settings.Logging.MaxFileSize": "Max. Dateigröße (MB):",
   "Settings.Logging.MinLogLevel": "Minimale Protokollstufe:",
@@ -142,17 +142,28 @@
   "Tray.Exit": "Beenden",
   "Tray.MinimizedMessage": "Anwendung in Systemleiste minimiert",
   "Tray.ShowWindow": "Fenster Anzeigen",
-  "Validation.ArgumentsTooLong": "Arguments are too long. Maximum length is 8192 characters.",
-  "Validation.DirectoryNotFound": "The working directory does not exist.",
-  "Validation.DirectoryValidationError": "Error validating directory: {0}",
-  "Validation.ExecutablePathRequired": "Executable path is required.",
-  "Validation.FileNotFound": "The executable file does not exist.",
-  "Validation.InvalidNullCharacter": "Arguments cannot contain null characters.",
-  "Validation.InvalidPathCharacters": "The path contains invalid characters.",
-  "Validation.InvalidPathFormat": "The path format is invalid.",
-  "Validation.NoFileExtension": "The file does not have an extension. Please specify a valid executable file.",
-  "Validation.PathIsDirectory": "The specified path is a directory, not a file.",
-  "Validation.PathNotSupported": "The path format is not supported.",
-  "Validation.PathTooLong": "The path is too long. Maximum length is 260 characters.",
-  "Validation.PathValidationError": "Error validating path: {0}"
+  "Validation.ArgumentsTooLong": "Argumente sind zu lang. Maximale Länge beträgt 8192 Zeichen.",
+  "Validation.DirectoryNotFound": "Das Arbeitsverzeichnis existiert nicht.",
+  "Validation.DirectoryValidationError": "Fehler beim Validieren des Verzeichnisses: {0}",
+  "Validation.ExecutablePathRequired": "Programmpfad ist erforderlich.",
+  "Validation.FileNotFound": "Die ausführbare Datei existiert nicht.",
+  "Validation.InvalidNullCharacter": "Argumente dürfen keine Nullzeichen enthalten.",
+  "Validation.InvalidPathCharacters": "Der Pfad enthält ungültige Zeichen.",
+  "Validation.InvalidPathFormat": "Das Pfadformat ist ungültig.",
+  "Validation.NoFileExtension": "Die Datei hat keine Erweiterung. Bitte geben Sie eine gültige ausführbare Datei an.",
+  "Validation.PathIsDirectory": "Der angegebene Pfad ist ein Verzeichnis, keine Datei.",
+  "Validation.PathNotSupported": "Das Pfadformat wird nicht unterstützt.",
+  "Validation.PathTooLong": "Der Pfad ist zu lang. Maximale Länge beträgt 260 Zeichen.",
+  "Validation.PathValidationError": "Fehler beim Validieren des Pfads: {0}",
+  "Settings.Appearance": "Appearance",
+  "Settings.Appearance.FontFamily": "Font Family:",
+  "Settings.Appearance.FontSize": "Font Size:",
+  "Settings.Appearance.BackgroundColor": "Background Color:",
+  "Settings.Appearance.TextColor": "Text Color:",
+  "Settings.Appearance.HighlightColor": "Highlight Color:",
+  "Settings.Appearance.BorderColor": "Border Color:",
+  "Settings.Appearance.SurfaceColor": "Surface Color:",
+  "Settings.Appearance.SecondaryTextColor": "Secondary Text Color:",
+  "Settings.Appearance.Preview": "Preview:",
+  "Settings.Appearance.ResetToDefaults": "Reset to Defaults"
 }
