--- a/Localization/el.json
+++ b/Localization/el.json
@@ -18,7 +18,7 @@
   "Dialog.Apply": "Εφαρμογή",
   "Dialog.Cancel": "Ακύρωση",
   "Dialog.ConfirmRemoval": "Επιβεβαίωση Αφαίρεσης",
-  "Dialog.ExecutableFilesFilter": "Executable Files (*.exe)|*.exe|All Files (*.*)|*.*",
+  "Dialog.ExecutableFilesFilter": "Εκτελέσιμα Αρχεία (*.exe)|*.exe|Όλα τα Αρχεία (*.*)|*.*",
   "Dialog.No": "Όχι",
   "Dialog.NoSelection": "Καμία Επιλογή",
   "Dialog.OK": "OK",
@@ -41,7 +41,7 @@
   "Export.Success": "Εξαγωγή Ολοκληρώθηκε",
   "Export.Title": "Εξαγωγή Καταγραφών",
   "Export.UILogsExported": "Οι UI καταγραφές εξήχθησαν επιτυχώς!",
-  "Log.ArgumentsInvalid": "Cannot restart {0}: Arguments invalid - {1}",
+  "Log.ArgumentsInvalid": "Δεν είναι δυνατή η επανεκκίνηση του {0}: Μη έγκυρα ορίσματα - {1}",
   "Log.ErrorCheckingProcess": "Σφάλμα κατά τον έλεγχο εάν εκτελείται το {0}: {1}",
   "Log.ErrorMonitoring": "Σφάλμα παρακολούθησης {0}: {1}",
   "Log.FailedToRestart": "Αποτυχία επανεκκίνησης του {0}: {1}",
@@ -60,8 +60,8 @@
   "Log.ShuttingDown": "Τερματισμός του RestartIt",
   "Log.Started": "Το RestartIt ξεκίνησε επιτυχώς",
   "Log.SuccessfullyRestarted": "Επιτυχής επανεκκίνηση του {0}",
-  "Log.ValidationFailed": "Cannot restart {0}: {1}",
-  "Log.WorkingDirectoryInvalid": "Cannot restart {0}: Working directory invalid - {1}",
+  "Log.ValidationFailed": "Δεν είναι δυνατή η επανεκκίνηση του {0}: {1}",
+  "Log.WorkingDirectoryInvalid": "Δεν είναι δυνατή η επανεκκίνηση του {0}: Μη έγκυρος φάκελος εργασίας - {1}",
   "MainWindow.ActivityLog": "Καταγραφή Δραστηριότητας",
   "MainWindow.AddProgram": "➕ Προσθήκη Προγράμματος",
   "MainWindow.ClearLog": "Καθαρισμός Καταγραφής",
@@ -69,11 +69,10 @@
   "MainWindow.MonitoringActive": "Η παρακολούθηση είναι ενεργή",
   "MainWindow.MonitoringStopped": "Η παρακολούθηση σταμάτησε",
   "MainWindow.Remove": "Αφαίρεση",
-  "MainWindow.Setings": "Ρυθμίσεις",
-  "MainWindow.Settings": "Settings",
+  "MainWindow.Settings": "Ρυθμίσεις",
   "ProgramEdit.AddTitle": "Προσθήκη Προγράμματος",
   "ProgramEdit.Arguments": "Ορίσματα:",
-  "ProgramEdit.ArgumentsOptional": "Arguments (optional):",
+  "ProgramEdit.ArgumentsOptional": "Ορίσματα (προαιρετικό):",
   "ProgramEdit.Browse": "Περιήγηση...",
   "ProgramEdit.CheckInterval": "Διάστημα Ελέγχου (δευτερόλεπτα):",
   "ProgramEdit.ExecutablePath": "Διαδρομή Εκτελέσιμου:",
@@ -86,7 +85,7 @@
   "ProgramEdit.Title": "Επεξεργασία Προγράμματος",
   "ProgramEdit.ValidationError": "Σφάλμα Επικύρωσης",
   "ProgramEdit.WorkingDirectory": "Φάκελος Εργασίας:",
-  "ProgramEdit.WorkingDirectoryOptional": "Working Directory (optional):",
+  "ProgramEdit.WorkingDirectoryOptional": "Φάκελος Εργασίας (προαιρετικό):",
   "Settings.About": "Σχετικά",
   "Settings.About.Copyright": "Copyright © 2025 Antik79",
   "Settings.About.Description": "Μια εφαρμογή Windows που παρακολουθεί καθορισμένα προγράμματα και τα επανεκκινεί αυτόματα αν σταματήσουν να τρέχουν.",
@@ -106,20 +105,20 @@
   "Settings.Email.NotifyOnFailure": "Ειδοποίηση σε Αποτυχία Επανεκκίνησης",
   "Settings.Email.NotifyOnRestart": "Ειδοποίηση σε Επιτυχή Επανεκκίνηση",
   "Settings.Email.RecipientEmail": "Email Παραλήπτη:",
-  "Settings.Email.RecipientEmailRequired": "Please enter recipient email.",
+  "Settings.Email.RecipientEmailRequired": "Παρακαλώ εισάγετε email παραλήπτη.",
   "Settings.Email.SenderEmail": "Email Αποστολέα:",
-  "Settings.Email.SenderEmailRequired": "Please enter sender email.",
+  "Settings.Email.SenderEmailRequired": "Παρακαλώ εισάγετε email αποστολέα.",
   "Settings.Email.SenderName": "Όνομα Αποστολέα:",
   "Settings.Email.SenderPassword": "Κωδικός Αποστολέα:",
   "Settings.Email.SmtpPort": "Θύρα SMTP:",
-  "Settings.Email.SmtpPortInvalid": "Please enter valid SMTP port.",
+  "Settings.Email.SmtpPortInvalid": "Παρακαλώ εισάγετε έγκυρη θύρα SMTP.",
   "Settings.Email.SmtpServer": "Διακομιστής SMTP:",
-  "Settings.Email.SmtpServerRequired": "Please enter SMTP server.",
-  "Settings.Email.TestBody": "This is a test email to verify your email notification settings are working correctly.\n\nIf you receive this email, your settings are configured properly!",
+  "Settings.Email.SmtpServerRequired": "Παρακαλώ εισάγετε διακομιστή SMTP.",
+  "Settings.Email.TestBody": "Αυτό είναι ένα δοκιμαστικό email για να επαληθεύσετε ότι οι ρυθμίσεις ειδοποιήσεων email λειτουργούν σωστά.\n\nΑν λάβετε αυτό το email, οι ρυθμίσεις σας είναι σωστά διαμορφωμένες!",
   "Settings.Email.TestEmail": "Αποστολή Δοκιμαστικού Email",
   "Settings.Email.TestError": "Αποτυχία Δοκιμαστικού Email",
   "Settings.Email.TestErrorMessage": "Failed to send test email:\n\n{0}\n\nCommon issues:\n• Wrong SMTP server or port\n• Invalid credentials\n• App password required (Gmail)\n• Firewall blocking SMTP",
-  "Settings.Email.TestSubject": "Test Email from RestartIt",
+  "Settings.Email.TestSubject": "Δοκιμαστικό Email από το RestartIt",
   "Settings.Email.TestSuccess": "Δοκιμαστικό Email Στάλθηκε",
   "Settings.Email.TestSuccessMessage": "Το δοκιμαστικό email στάλθηκε με επιτυχία! Ελέγξτε τα εισερχόμενά σας.",
   "Settings.Email.UseSsl": "Χρήση SSL/TLS",
@@ -127,7 +126,7 @@
   "Settings.Logging": "Καταγραφή",
   "Settings.Logging.EnableFileLogging": "Ενεργοποίηση Καταγραφής σε Αρχείο",
   "Settings.Logging.KeepLogsFor": "Διατήρηση Καταγραφών (ημέρες):",
-  "Settings.Logging.LogFileDirectory": "Log File Directory:",
+  "Settings.Logging.LogFileDirectory": "Φάκελος Αρχείου Καταγραφής:",
   "Settings.Logging.LogFilePath": "Διαδρομή Αρχείου Καταγραφής:",
   "Settings.Logging.MaxFileSize": "Μέγιστο Μέγεθος Αρχείου (MB):",
   "Settings.Logging.MinLogLevel": "Ελάχιστο Επίπεδο Καταγραφής:",
@@ -141,17 +140,28 @@
   "Tray.Exit": "Έξοδος",
   "Tray.MinimizedMessage": "Η εφαρμογή ελαχιστοποιήθηκε στη συστοιχία",
   "Tray.ShowWindow": "Εμφάνιση Παραθύρου",
-  "Validation.ArgumentsTooLong": "Arguments are too long. Maximum length is 8192 characters.",
-  "Validation.DirectoryNotFound": "The working directory does not exist.",
-  "Validation.DirectoryValidationError": "Error validating directory: {0}",
-  "Validation.ExecutablePathRequired": "Executable path is required.",
-  "Validation.FileNotFound": "The executable file does not exist.",
-  "Validation.InvalidNullCharacter": "Arguments cannot contain null characters.",
-  "Validation.InvalidPathCharacters": "The path contains invalid characters.",
-  "Validation.InvalidPathFormat": "The path format is invalid.",
-  "Validation.NoFileExtension": "The file does not have an extension. Please specify a valid executable file.",
-  "Validation.PathIsDirectory": "The specified path is a directory, not a file.",
-  "Validation.PathNotSupported": "The path format is not supported.",
-  "Validation.PathTooLong": "The path is too long. Maximum length is 260 characters.",
-  "Validation.PathValidationError": "Error validating path: {0}"
+  "Validation.ArgumentsTooLong": "Τα ορίσματα είναι πολύ μεγάλα. Μέγιστο μήκος είναι 8192 χαρακτήρες.",
+  "Validation.DirectoryNotFound": "Ο φάκελος εργασίας δεν υπάρχει.",
+  "Validation.DirectoryValidationError": "Σφάλμα επικύρωσης φακέλου: {0}",
+  "Validation.ExecutablePathRequired": "Απαιτείται διαδρομή εκτελέσιμου.",
+  "Validation.FileNotFound": "Το εκτελέσιμο αρχείο δεν υπάρχει.",
+  "Validation.InvalidNullCharacter": "Τα ορίσματα δεν μπορούν να περιέχουν μηδενικούς χαρακτήρες.",
+  "Validation.InvalidPathCharacters": "Η διαδρομή περιέχει μη έγκυρους χαρακτήρες.",
+  "Validation.InvalidPathFormat": "Η μορφή διαδρομής δεν είναι έγκυρη.",
+  "Validation.NoFileExtension": "Το αρχείο δεν έχει επέκταση. Παρακαλώ ορίστε ένα έγκυρο εκτελέσιμο αρχείο.",
+  "Validation.PathIsDirectory": "Η καθορισμένη διαδρομή είναι φάκελος, όχι αρχείο.",
+  "Validation.PathNotSupported": "Η μορφή διαδρομής δεν υποστηρίζεται.",
+  "Validation.PathTooLong": "Η διαδρομή είναι πολύ μεγάλη. Μέγιστο μήκος είναι 260 χαρακτήρες.",
+  "Validation.PathValidationError": "Σφάλμα επικύρωσης διαδρομής: {0}",
+  "Settings.Appearance": "Appearance",
+  "Settings.Appearance.FontFamily": "Font Family:",
+  "Settings.Appearance.FontSize": "Font Size:",
+  "Settings.Appearance.BackgroundColor": "Background Color:",
+  "Settings.Appearance.TextColor": "Text Color:",
+  "Settings.Appearance.HighlightColor": "Highlight Color:",
+  "Settings.Appearance.BorderColor": "Border Color:",
+  "Settings.Appearance.SurfaceColor": "Surface Color:",
+  "Settings.Appearance.SecondaryTextColor": "Secondary Text Color:",
+  "Settings.Appearance.Preview": "Preview:",
+  "Settings.Appearance.ResetToDefaults": "Reset to Defaults"
 }
