--- a/Localization/en.json
+++ b/Localization/en.json
@@ -41,8 +41,9 @@
   "Dialog.Yes": "Yes",
   "Dialog.No": "No",
   "Dialog.OK": "OK",
-  "Dialog.Cancel": "Cancel",
   "Dialog.Apply": "Apply",
+  "Dialog.Applied": "Applied!",
+  "Dialog.Cancel": "Cancel",
   "Dialog.SaveTestEmail": "Save & Test Email",
 
   "ProgramEdit.Title": "Edit Program",
@@ -105,6 +106,19 @@
   "Settings.App.StartMinimized": "Start Minimized",
   "Settings.App.StartMinimizedDesc": "Start RestartIt minimized to system tray (requires 'Minimize to system tray' enabled).",
   "Settings.App.Language": "Language:",
+
+  "Settings.Appearance": "Appearance",
+  "Settings.Appearance.ThemePreset": "Theme Preset:",
+  "Settings.Appearance.FontFamily": "Font Family:",
+  "Settings.Appearance.FontSize": "Font Size:",
+  "Settings.Appearance.BackgroundColor": "Background Color:",
+  "Settings.Appearance.TextColor": "Text Color:",
+  "Settings.Appearance.HighlightColor": "Highlight Color:",
+  "Settings.Appearance.BorderColor": "Border Color:",
+  "Settings.Appearance.SurfaceColor": "Surface Color:",
+  "Settings.Appearance.SecondaryTextColor": "Secondary Text Color:",
+  "Settings.Appearance.Preview": "Preview:",
+  "Settings.Appearance.ResetToDefaults": "Reset to Defaults",
 
   "Settings.About.Version": "Version",
   "Settings.About.Description": "A Windows desktop application that monitors specified programs and automatically restarts them if they stop running.",
