--- a/Localization/nl.json
+++ b/Localization/nl.json
@@ -18,7 +18,7 @@
   "Dialog.Apply": "Toepassen",
   "Dialog.Cancel": "Annuleren",
   "Dialog.ConfirmRemoval": "Verwijdering Bevestigen",
-  "Dialog.ExecutableFilesFilter": "Executable Files (*.exe)|*.exe|All Files (*.*)|*.*",
+  "Dialog.ExecutableFilesFilter": "Uitvoerbare Bestanden (*.exe)|*.exe|Alle Bestanden (*.*)|*.*",
   "Dialog.No": "Nee",
   "Dialog.NoSelection": "Geen Selectie",
   "Dialog.OK": "OK",
@@ -41,7 +41,7 @@
   "Export.Success": "Export Voltooid",
   "Export.Title": "Logs Exporteren",
   "Export.UILogsExported": "UI logs succesvol geëxporteerd!",
-  "Log.ArgumentsInvalid": "Cannot restart {0}: Arguments invalid - {1}",
+  "Log.ArgumentsInvalid": "Kan {0} niet herstarten: Argumenten ongeldig - {1}",
   "Log.ErrorCheckingProcess": "Fout bij controleren of {0} actief is: {1}",
   "Log.ErrorMonitoring": "Fout bij monitoren van {0}: {1}",
   "Log.FailedToRestart": "Herstarten van {0} mislukt: {1}",
@@ -60,8 +60,8 @@
   "Log.ShuttingDown": "RestartIt wordt afgesloten",
   "Log.Started": "RestartIt succesvol gestart",
   "Log.SuccessfullyRestarted": "{0} succesvol herstart",
-  "Log.ValidationFailed": "Cannot restart {0}: {1}",
-  "Log.WorkingDirectoryInvalid": "Cannot restart {0}: Working directory invalid - {1}",
+  "Log.ValidationFailed": "Kan {0} niet herstarten: {1}",
+  "Log.WorkingDirectoryInvalid": "Kan {0} niet herstarten: Werkmap ongeldig - {1}",
   "MainWindow.ActivityLog": "Activiteitenlog",
   "MainWindow.AddProgram": "➕ Programma Toevoegen",
   "MainWindow.ClearLog": "Log Wissen",
@@ -72,7 +72,7 @@
   "MainWindow.Settings": "Instellingen",
   "ProgramEdit.AddTitle": "Programma Toevoegen",
   "ProgramEdit.Arguments": "Argumenten:",
-  "ProgramEdit.ArgumentsOptional": "Arguments (optional):",
+  "ProgramEdit.ArgumentsOptional": "Argumenten (optioneel):",
   "ProgramEdit.Browse": "Bladeren...",
   "ProgramEdit.CheckInterval": "Controle Interval (seconden):",
   "ProgramEdit.ExecutablePath": "Uitvoerbaar Bestand:",
@@ -85,7 +85,7 @@
   "ProgramEdit.Title": "Programma Bewerken",
   "ProgramEdit.ValidationError": "Validatiefout",
   "ProgramEdit.WorkingDirectory": "Werkmap:",
-  "ProgramEdit.WorkingDirectoryOptional": "Working Directory (optional):",
+  "ProgramEdit.WorkingDirectoryOptional": "Werkmap (optioneel):",
   "Settings.About": "Over",
   "Settings.About.Copyright": "Copyright © 2025 Antik79",
   "Settings.About.Description": "Een Windows desktop applicatie die opgegeven programma's monitort en deze automatisch herstart als ze stoppen.",
@@ -97,30 +97,30 @@
   "Settings.About.Version": "Versie",
   "Settings.App.Language": "Taal:",
   "Settings.App.MinimizeToTray": "Minimaliseren naar Systeemvak",
-  "Settings.App.MinimizeToTrayDesc": "When minimized, the application will hide to the system tray instead of the taskbar.",
+  "Settings.App.MinimizeToTrayDesc": "Wanneer geminimaliseerd, wordt de applicatie verborgen in het systeemvak in plaats van de taakbalk.",
   "Settings.App.StartMinimized": "Geminimaliseerd Starten",
-  "Settings.App.StartMinimizedDesc": "Start RestartIt minimized to system tray (requires 'Minimize to system tray' enabled).",
+  "Settings.App.StartMinimizedDesc": "Start RestartIt geminimaliseerd in systeemvak (vereist 'Minimaliseren naar Systeemvak' ingeschakeld).",
   "Settings.App.StartWithWindows": "Starten met Windows",
-  "Settings.App.StartWithWindowsDesc": "Automatically start RestartIt when Windows starts.",
+  "Settings.App.StartWithWindowsDesc": "Start RestartIt automatisch wanneer Windows start.",
   "Settings.Application": "Applicatie",
   "Settings.Email.Enable": "E-mailmeldingen Inschakelen",
   "Settings.Email.NotifyOnFailure": "Melding bij Herstart Fout",
   "Settings.Email.NotifyOnRestart": "Melding bij Succesvolle Herstart",
   "Settings.Email.RecipientEmail": "Ontvanger E-mail:",
-  "Settings.Email.RecipientEmailRequired": "Please enter recipient email.",
+  "Settings.Email.RecipientEmailRequired": "Voer ontvanger e-mail in.",
   "Settings.Email.SenderEmail": "Afzender E-mail:",
-  "Settings.Email.SenderEmailRequired": "Please enter sender email.",
+  "Settings.Email.SenderEmailRequired": "Voer afzender e-mail in.",
   "Settings.Email.SenderName": "Afzender Naam:",
   "Settings.Email.SenderPassword": "Afzender Wachtwoord:",
   "Settings.Email.SmtpPort": "SMTP Poort:",
-  "Settings.Email.SmtpPortInvalid": "Please enter valid SMTP port.",
+  "Settings.Email.SmtpPortInvalid": "Voer een geldige SMTP-poort in.",
   "Settings.Email.SmtpServer": "SMTP Server:",
-  "Settings.Email.SmtpServerRequired": "Please enter SMTP server.",
-  "Settings.Email.TestBody": "This is a test email to verify your email notification settings are working correctly.\n\nIf you receive this email, your settings are configured properly!",
+  "Settings.Email.SmtpServerRequired": "Voer SMTP-server in.",
+  "Settings.Email.TestBody": "Dit is een test-e-mail om te controleren of uw e-mailmeldingsinstellingen correct werken.\n\nAls u deze e-mail ontvangt, zijn uw instellingen juist geconfigureerd!",
   "Settings.Email.TestEmail": "Test E-mail Verzenden",
   "Settings.Email.TestError": "E-mail Test Mislukt",
-  "Settings.Email.TestErrorMessage": "Failed to send test email:\n\n{0}\n\nCommon issues:\n• Wrong SMTP server or port\n• Invalid credentials\n• App password required (Gmail)\n• Firewall blocking SMTP",
-  "Settings.Email.TestSubject": "Test Email from RestartIt",
+  "Settings.Email.TestErrorMessage": "Kan test-e-mail niet verzenden:\n\n{0}\n\nVeelvoorkomende problemen:\n• Verkeerde SMTP-server of poort\n• Ongeldige inloggegevens\n• App-wachtwoord vereist (Gmail)\n• Firewall blokkeert SMTP",
+  "Settings.Email.TestSubject": "Test E-mail van RestartIt",
   "Settings.Email.TestSuccess": "Test E-mail Verzonden",
   "Settings.Email.TestSuccessMessage": "Test e-mail succesvol verzonden! Controleer uw inbox.",
   "Settings.Email.UseSsl": "SSL/TLS Gebruiken",
@@ -128,7 +128,7 @@
   "Settings.Logging": "Logboek",
   "Settings.Logging.EnableFileLogging": "Bestandslogboek Inschakelen",
   "Settings.Logging.KeepLogsFor": "Logs Bewaren Voor (dagen):",
-  "Settings.Logging.LogFileDirectory": "Log File Directory:",
+  "Settings.Logging.LogFileDirectory": "Logbestandsmap:",
   "Settings.Logging.LogFilePath": "Logbestandspad:",
   "Settings.Logging.MaxFileSize": "Max Bestandsgrootte (MB):",
   "Settings.Logging.MinLogLevel": "Minimaal Logniveau:",
@@ -142,17 +142,28 @@
   "Tray.Exit": "Afsluiten",
   "Tray.MinimizedMessage": "Applicatie geminimaliseerd naar systeemvak",
   "Tray.ShowWindow": "Venster Tonen",
-  "Validation.ArgumentsTooLong": "Arguments are too long. Maximum length is 8192 characters.",
-  "Validation.DirectoryNotFound": "The working directory does not exist.",
-  "Validation.DirectoryValidationError": "Error validating directory: {0}",
-  "Validation.ExecutablePathRequired": "Executable path is required.",
-  "Validation.FileNotFound": "The executable file does not exist.",
-  "Validation.InvalidNullCharacter": "Arguments cannot contain null characters.",
-  "Validation.InvalidPathCharacters": "The path contains invalid characters.",
-  "Validation.InvalidPathFormat": "The path format is invalid.",
-  "Validation.NoFileExtension": "The file does not have an extension. Please specify a valid executable file.",
-  "Validation.PathIsDirectory": "The specified path is a directory, not a file.",
-  "Validation.PathNotSupported": "The path format is not supported.",
-  "Validation.PathTooLong": "The path is too long. Maximum length is 260 characters.",
-  "Validation.PathValidationError": "Error validating path: {0}"
+  "Validation.ArgumentsTooLong": "Argumenten zijn te lang. Maximale lengte is 8192 tekens.",
+  "Validation.DirectoryNotFound": "De werkmap bestaat niet.",
+  "Validation.DirectoryValidationError": "Fout bij valideren van map: {0}",
+  "Validation.ExecutablePathRequired": "Uitvoerbaar bestandspad is verplicht.",
+  "Validation.FileNotFound": "Het uitvoerbare bestand bestaat niet.",
+  "Validation.InvalidNullCharacter": "Argumenten mogen geen null-tekens bevatten.",
+  "Validation.InvalidPathCharacters": "Het pad bevat ongeldige tekens.",
+  "Validation.InvalidPathFormat": "Het padformaat is ongeldig.",
+  "Validation.NoFileExtension": "Het bestand heeft geen extensie. Specificeer een geldig uitvoerbaar bestand.",
+  "Validation.PathIsDirectory": "Het opgegeven pad is een map, geen bestand.",
+  "Validation.PathNotSupported": "Het padformaat wordt niet ondersteund.",
+  "Validation.PathTooLong": "Het pad is te lang. Maximale lengte is 260 tekens.",
+  "Validation.PathValidationError": "Fout bij valideren van pad: {0}",
+  "Settings.Appearance": "Appearance",
+  "Settings.Appearance.FontFamily": "Font Family:",
+  "Settings.Appearance.FontSize": "Font Size:",
+  "Settings.Appearance.BackgroundColor": "Background Color:",
+  "Settings.Appearance.TextColor": "Text Color:",
+  "Settings.Appearance.HighlightColor": "Highlight Color:",
+  "Settings.Appearance.BorderColor": "Border Color:",
+  "Settings.Appearance.SurfaceColor": "Surface Color:",
+  "Settings.Appearance.SecondaryTextColor": "Secondary Text Color:",
+  "Settings.Appearance.Preview": "Preview:",
+  "Settings.Appearance.ResetToDefaults": "Reset to Defaults"
 }
