--- a/Localization/fr.json
+++ b/Localization/fr.json
@@ -18,7 +18,7 @@
   "Dialog.Apply": "Appliquer",
   "Dialog.Cancel": "Annuler",
   "Dialog.ConfirmRemoval": "Confirmer la Suppression",
-  "Dialog.ExecutableFilesFilter": "Executable Files (*.exe)|*.exe|All Files (*.*)|*.*",
+  "Dialog.ExecutableFilesFilter": "Fichiers Exécutables (*.exe)|*.exe|Tous les Fichiers (*.*)|*.*",
   "Dialog.No": "Non",
   "Dialog.NoSelection": "Aucune Sélection",
   "Dialog.OK": "OK",
@@ -41,7 +41,7 @@
   "Export.Success": "Exportation Terminée",
   "Export.Title": "Exporter les Journaux",
   "Export.UILogsExported": "Journaux UI exportés avec succès!",
-  "Log.ArgumentsInvalid": "Cannot restart {0}: Arguments invalid - {1}",
+  "Log.ArgumentsInvalid": "Impossible de redémarrer {0}: Arguments invalides - {1}",
   "Log.ErrorCheckingProcess": "Erreur lors de la vérification de {0}: {1}",
   "Log.ErrorMonitoring": "Erreur lors de la surveillance de {0}: {1}",
   "Log.FailedToRestart": "Échec du redémarrage de {0}: {1}",
@@ -60,8 +60,8 @@
   "Log.ShuttingDown": "Arrêt de RestartIt",
   "Log.Started": "RestartIt démarré avec succès",
   "Log.SuccessfullyRestarted": "{0} redémarré avec succès",
-  "Log.ValidationFailed": "Cannot restart {0}: {1}",
-  "Log.WorkingDirectoryInvalid": "Cannot restart {0}: Working directory invalid - {1}",
+  "Log.ValidationFailed": "Impossible de redémarrer {0}: {1}",
+  "Log.WorkingDirectoryInvalid": "Impossible de redémarrer {0}: Répertoire de travail invalide - {1}",
   "MainWindow.ActivityLog": "Journal d'Activité",
   "MainWindow.AddProgram": "➕ Ajouter un Programme",
   "MainWindow.ClearLog": "Effacer le Journal",
@@ -72,7 +72,7 @@
   "MainWindow.Settings": "Paramètres",
   "ProgramEdit.AddTitle": "Ajouter un Programme",
   "ProgramEdit.Arguments": "Arguments:",
-  "ProgramEdit.ArgumentsOptional": "Arguments (optional):",
+  "ProgramEdit.ArgumentsOptional": "Arguments (optionnel):",
   "ProgramEdit.Browse": "Parcourir...",
   "ProgramEdit.CheckInterval": "Intervalle de Vérification (secondes):",
   "ProgramEdit.ExecutablePath": "Chemin de l'Exécutable:",
@@ -85,7 +85,7 @@
   "ProgramEdit.Title": "Modifier le Programme",
   "ProgramEdit.ValidationError": "Erreur de Validation",
   "ProgramEdit.WorkingDirectory": "Répertoire de Travail:",
-  "ProgramEdit.WorkingDirectoryOptional": "Working Directory (optional):",
+  "ProgramEdit.WorkingDirectoryOptional": "Répertoire de Travail (optionnel):",
   "Settings.About": "À propos",
   "Settings.About.Copyright": "Copyright © 2025 Antik79",
   "Settings.About.Description": "Une application de bureau Windows qui surveille les programmes spécifiés et les redémarre automatiquement s'ils s'arrêtent.",
@@ -97,30 +97,30 @@
   "Settings.About.Version": "Version",
   "Settings.App.Language": "Langue:",
   "Settings.App.MinimizeToTray": "Réduire dans la Zone de Notification",
-  "Settings.App.MinimizeToTrayDesc": "When minimized, the application will hide to the system tray instead of the taskbar.",
+  "Settings.App.MinimizeToTrayDesc": "Lorsqu'elle est réduite, l'application se cache dans la zone de notification au lieu de la barre des tâches.",
   "Settings.App.StartMinimized": "Démarrer Réduit",
-  "Settings.App.StartMinimizedDesc": "Start RestartIt minimized to system tray (requires 'Minimize to system tray' enabled).",
+  "Settings.App.StartMinimizedDesc": "Démarrer RestartIt réduit dans la zone de notification (nécessite 'Réduire dans la Zone de Notification' activé).",
   "Settings.App.StartWithWindows": "Démarrer avec Windows",
-  "Settings.App.StartWithWindowsDesc": "Automatically start RestartIt when Windows starts.",
+  "Settings.App.StartWithWindowsDesc": "Démarrer automatiquement RestartIt au démarrage de Windows.",
   "Settings.Application": "Application",
   "Settings.Email.Enable": "Activer les Notifications par Email",
   "Settings.Email.NotifyOnFailure": "Notifier en Cas d'Échec",
   "Settings.Email.NotifyOnRestart": "Notifier en Cas de Redémarrage Réussi",
   "Settings.Email.RecipientEmail": "Email du Destinataire:",
-  "Settings.Email.RecipientEmailRequired": "Please enter recipient email.",
+  "Settings.Email.RecipientEmailRequired": "Veuillez entrer l'email du destinataire.",
   "Settings.Email.SenderEmail": "Email de l'Expéditeur:",
-  "Settings.Email.SenderEmailRequired": "Please enter sender email.",
+  "Settings.Email.SenderEmailRequired": "Veuillez entrer l'email de l'expéditeur.",
   "Settings.Email.SenderName": "Nom de l'Expéditeur:",
   "Settings.Email.SenderPassword": "Mot de Passe de l'Expéditeur:",
   "Settings.Email.SmtpPort": "Port SMTP:",
-  "Settings.Email.SmtpPortInvalid": "Please enter valid SMTP port.",
+  "Settings.Email.SmtpPortInvalid": "Veuillez entrer un port SMTP valide.",
   "Settings.Email.SmtpServer": "Serveur SMTP:",
-  "Settings.Email.SmtpServerRequired": "Please enter SMTP server.",
-  "Settings.Email.TestBody": "This is a test email to verify your email notification settings are working correctly.\n\nIf you receive this email, your settings are configured properly!",
+  "Settings.Email.SmtpServerRequired": "Veuillez entrer le serveur SMTP.",
+  "Settings.Email.TestBody": "Ceci est un email de test pour vérifier que vos paramètres de notification par email fonctionnent correctement.\n\nSi vous recevez cet email, vos paramètres sont correctement configurés!",
   "Settings.Email.TestEmail": "Envoyer un Email de Test",
   "Settings.Email.TestError": "Échec du Test Email",
-  "Settings.Email.TestErrorMessage": "Failed to send test email:\n\n{0}\n\nCommon issues:\n• Wrong SMTP server or port\n• Invalid credentials\n• App password required (Gmail)\n• Firewall blocking SMTP",
-  "Settings.Email.TestSubject": "Test Email from RestartIt",
+  "Settings.Email.TestErrorMessage": "Échec de l'envoi de l'email de test:\n\n{0}\n\nProblèmes courants:\n• Serveur SMTP ou port incorrect\n• Identifiants invalides\n• Mot de passe d'application requis (Gmail)\n• Pare-feu bloquant SMTP",
+  "Settings.Email.TestSubject": "Email de Test de RestartIt",
   "Settings.Email.TestSuccess": "Email de Test Envoyé",
   "Settings.Email.TestSuccessMessage": "Email de test envoyé avec succès! Vérifiez votre boîte de réception.",
   "Settings.Email.UseSsl": "Utiliser SSL/TLS",
@@ -128,7 +128,7 @@
   "Settings.Logging": "Journalisation",
   "Settings.Logging.EnableFileLogging": "Activer la Journalisation",
   "Settings.Logging.KeepLogsFor": "Conserver les Journaux (jours):",
-  "Settings.Logging.LogFileDirectory": "Log File Directory:",
+  "Settings.Logging.LogFileDirectory": "Répertoire des Fichiers Journal:",
   "Settings.Logging.LogFilePath": "Chemin du Fichier Journal:",
   "Settings.Logging.MaxFileSize": "Taille Max du Fichier (Mo):",
   "Settings.Logging.MinLogLevel": "Niveau de Journal Minimum:",
@@ -142,17 +142,28 @@
   "Tray.Exit": "Quitter",
   "Tray.MinimizedMessage": "Application réduite dans la zone de notification",
   "Tray.ShowWindow": "Afficher la Fenêtre",
-  "Validation.ArgumentsTooLong": "Arguments are too long. Maximum length is 8192 characters.",
-  "Validation.DirectoryNotFound": "The working directory does not exist.",
-  "Validation.DirectoryValidationError": "Error validating directory: {0}",
-  "Validation.ExecutablePathRequired": "Executable path is required.",
-  "Validation.FileNotFound": "The executable file does not exist.",
-  "Validation.InvalidNullCharacter": "Arguments cannot contain null characters.",
-  "Validation.InvalidPathCharacters": "The path contains invalid characters.",
-  "Validation.InvalidPathFormat": "The path format is invalid.",
-  "Validation.NoFileExtension": "The file does not have an extension. Please specify a valid executable file.",
-  "Validation.PathIsDirectory": "The specified path is a directory, not a file.",
-  "Validation.PathNotSupported": "The path format is not supported.",
-  "Validation.PathTooLong": "The path is too long. Maximum length is 260 characters.",
-  "Validation.PathValidationError": "Error validating path: {0}"
+  "Validation.ArgumentsTooLong": "Les arguments sont trop longs. Longueur maximale de 8192 caractères.",
+  "Validation.DirectoryNotFound": "Le répertoire de travail n'existe pas.",
+  "Validation.DirectoryValidationError": "Erreur de validation du répertoire: {0}",
+  "Validation.ExecutablePathRequired": "Le chemin de l'exécutable est requis.",
+  "Validation.FileNotFound": "Le fichier exécutable n'existe pas.",
+  "Validation.InvalidNullCharacter": "Les arguments ne peuvent pas contenir de caractères nuls.",
+  "Validation.InvalidPathCharacters": "Le chemin contient des caractères invalides.",
+  "Validation.InvalidPathFormat": "Le format du chemin est invalide.",
+  "Validation.NoFileExtension": "Le fichier n'a pas d'extension. Veuillez spécifier un fichier exécutable valide.",
+  "Validation.PathIsDirectory": "Le chemin spécifié est un répertoire, pas un fichier.",
+  "Validation.PathNotSupported": "Le format du chemin n'est pas pris en charge.",
+  "Validation.PathTooLong": "Le chemin est trop long. Longueur maximale de 260 caractères.",
+  "Validation.PathValidationError": "Erreur de validation du chemin: {0}",
+  "Settings.Appearance": "Appearance",
+  "Settings.Appearance.FontFamily": "Font Family:",
+  "Settings.Appearance.FontSize": "Font Size:",
+  "Settings.Appearance.BackgroundColor": "Background Color:",
+  "Settings.Appearance.TextColor": "Text Color:",
+  "Settings.Appearance.HighlightColor": "Highlight Color:",
+  "Settings.Appearance.BorderColor": "Border Color:",
+  "Settings.Appearance.SurfaceColor": "Surface Color:",
+  "Settings.Appearance.SecondaryTextColor": "Secondary Text Color:",
+  "Settings.Appearance.Preview": "Preview:",
+  "Settings.Appearance.ResetToDefaults": "Reset to Defaults"
 }
